--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Exchange rate</title>
-    <meta name="description" content="Description" />
 
-    
-    <link rel="manifest" href="manifest.json" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link
-      rel="apple-touch-icon"
-      sizes="192x192"
-      href="assets/pwa/icons/icon-192x192.png"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Exchange rate</title>
+  <meta name="description" content="Description" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/pwa/icons/icon-192x192.png"
-    />
 
-    <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
-    
+  <link rel="manifest" href="manifest.json" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" />
 
-    <script src="js/main.js"></script>
-  </body>
+  <link rel="icon" type="image/png" href="assets/pwa/icons/icon-192x192.png" />
+
+  <link rel="stylesheet" href="css/main.css" />
+</head>
+
+<body>
+
+  <iframe class="table"
+    src="https://pl.widgets.investing.com/live-currency-cross-rates?theme=darkTheme&roundedCorners=true&cols=bid,ask,high,low,change,time&pairs=1,46,40"
+    width="100%" height="100%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"></iframe>
+  <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">Obsługiwane przez: <a
+      href="https://pl.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=LIVE_CURRENCY_X_RATES&amp;utm_content=Footer%20Link"
+      target="_blank" rel="nofollow">Investing.com</a></div>
+
+  <div class="exchangeRate__wraper">
+    <ul class="exchangeRate__list"> NBP exchange rate in
+
+    </ul>
+  </div>
+
+  <aHREF="http://www.kitco.com/connecting.html">
+    <img class="gold__price" src="http://www.kitconet.com/images/quotes_4b2.gif" BORDER="0" alt="[Most Recent Quotes from www.kitco.com]">
+    </a>
+
+  <script src="js/main.js"></script>
+</body>
+
 </html>
