--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       href="https://pl.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=LIVE_CURRENCY_X_RATES&amp;utm_content=Footer%20Link"
       target="_blank" rel="nofollow">Investing.com</a></div>
 
-  <div class="exchangeRate__wraper">
+<!--   <div class="exchangeRate__wraper">
     <ul class="exchangeRate__list"> NBP exchange rate in
 
     </ul>
-  </div>
+  </div> -->
 
   <aHREF="http://www.kitco.com/connecting.html">
     <img class="gold__price" src="http://www.kitconet.com/images/quotes_4b2.gif" BORDER="0" alt="[Most Recent Quotes from www.kitco.com]">
