--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </ul>
   </div> -->
 
-  <aHREF="http://www.kitco.com/connecting.html">
-    <img class="gold__price" src="http://www.kitconet.com/images/quotes_4b2.gif" BORDER="0" alt="[Most Recent Quotes from www.kitco.com]">
+  <aHREF="https://www.kitco.com/connecting.html">
+    <img class="gold__price" src="https://www.kitconet.com/images/quotes_4b2.gif" BORDER="0" alt="[Most Recent Quotes from www.kitco.com]">
     </a>
 
   <script src="js/main.js"></script>
