--- a/src/content/index.html
+++ b/src/content/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Exchange rate</title>
     <meta name="description" content="Description" />
+    <script src="https://cinkciarz.pl/widget/cinkciarz.widget.js?currencies=EUR,USD"></script>
 
     <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -25,7 +26,10 @@
   </head>
 
   <body>
-    <iframe
+    <div class="cinkciarz_wraper">
+      <div id="cinkciarzPlWidget"></div>
+    </div>
+    <!-- <iframe
       class="table"
       src="https://pl.widgets.investing.com/live-currency-cross-rates?theme=darkTheme&roundedCorners=true&cols=bid,ask,high,low,change,time&pairs=1,46,40"
       width="100%"
@@ -35,7 +39,7 @@
       marginwidth="0"
       marginheight="0"
     ></iframe>
-    <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">
+    <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif">
       Obsługiwane przez:
       <a
         href="https://pl.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=LIVE_CURRENCY_X_RATES&amp;utm_content=Footer%20Link"
@@ -43,7 +47,7 @@
         rel="nofollow"
         >Investing.com</a
       >
-    </div>
+    </div> -->
 
     <div class="exchangeRate__wraper">
       <ul class="exchangeRate__list">
