--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
   </head>
 
   <body>
-    <div class="cinkciarz_wraper">
-      <div id="cinkciarzPlWidget"></div>
-    </div>
-    <!-- <iframe
+    <iframe
       class="table"
       src="https://pl.widgets.investing.com/live-currency-cross-rates?theme=darkTheme&roundedCorners=true&cols=bid,ask,high,low,change,time&pairs=1,46,40"
       width="100%"
@@ -47,7 +44,7 @@
         rel="nofollow"
         >Investing.com</a
       >
-    </div> -->
+    </div>
 
     <div class="exchangeRate__wraper">
       <ul class="exchangeRate__list">
@@ -63,7 +60,9 @@
         alt="[Most Recent Quotes from www.kitco.com]"
       />
     </a>
-
+    <div class="cinkciarz_wraper">
+      <div id="cinkciarzPlWidget"></div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
